# cioos-siooc-guide

./: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  docker-compose.yaml  draft copy.md  hello.py  makefile  mkdocs.yml  pyproject.toml  versions.json
.github/workflows/: build-website.yaml  delete-website-version.yaml  test-website.yaml
2025-11-27-BasisOfRecord-correction/: 404.html  index.html  sitemap.xml
2025-11-27-BasisOfRecord-correction/en/: index.html
20251127-AnnexeFrImprovments/: 404.html  index.html  sitemap.xml
20251127-AnnexeFrImprovments/en/: index.html
add-mike/: 404.html  index.html  sitemap.xml
add-mike/en/: index.html
add-mike/search/: search_index.json
config/en/: mkdocs.yml
config/fr/: mkdocs.yml
development/: 404.html  index.html  sitemap.xml
development/en/: index.html
development/search/: search_index.json
docs/: draft.md  index.en.md  index.fr.md  index.md  ra.en.md  ra.fr.md
docs/PGD/: Définitions  Définitions.en.md  Définitions.md  PGDCIOOS.en.md  (+3 more)
en/: index.html
feature-add-contributors/: 404.html  index.html  sitemap.xml
feature-add-mike/: 404.html  index.html  sitemap.xml
feature-add-mike-/: 404.html  index.html  sitemap.xml
feature-add-plausible-analytics/: 404.html  index.html  sitemap.xml
feature-branch-specific-mkdocs-yml/: 404.html  index.html  sitemap.xml
feature-improve-home-page/: 404.html  index.html  sitemap.xml
fix-fix-github-page-pr-deployment/: 404.html  index.html  sitemap.xml
gannej-patch-1/: 404.html  index.html  sitemap.xml
main/: 404.html  index.html  sitemap.xml
merge/: 404.html  index.html  sitemap.xml
tests/: test_site_structure.py
(+362 files in other folders)
