[project]
name = "ogsl-guide-de-gestion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mkdocs-git-revision-date-localized-plugin>=1.3.0",
    "mkdocs-material>=9.6.4",
    "mkdocs-static-i18n[material]>=1.3.0",
    "mkdocs>=1.6.1",
]
