[project]
name = "ogsl-guide-de-gestion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mkdocs-git-revision-date-localized-plugin>=1.3.0",
    "mkdocs-material>=9.6.4",
    "mkdocs-static-i18n[material]>=1.3.0",
    "mkdocs>=1.6.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.2",
]

[tool.ruff]
# Set the maximum line length to 88 (Black's default)
line-length = 88
# Target Python 3.12+
target-version = "py312"

[tool.ruff.lint]
# Enable import sorting and other useful rules
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings  
    "F",    # pyflakes
    "I",    # isort (import sorting)
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
]

ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
# Configure import sorting
known-first-party = ["tests"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"
# Use spaces for indentation
indent-style = "space"
